--- a/templates/profile/withdrawal/withdrawal-request.html
+++ b/templates/profile/withdrawal/withdrawal-request.html
@@ -57,6 +57,10 @@
                                                 {{ form.coin_selected|add_class:"form-control" }}
                                         </div>
                                         <div class="col-12 mb-15">
+                                            <label>Select Network</label>
+                                                {{ form.network_selected|add_class:"form-control" }}
+                                        </div>
+                                        <div class="col-12 mb-15">
                                             <label>Wallet Address</label>
                                             {{ form.coin_address|add_class:"form-control" }}
                                         </div>
