--- a/templates/index/base.html
+++ b/templates/index/base.html
@@ -50,7 +50,7 @@
                             <div class="menu-wrap">
                                 <nav class="menu-nav">
                                     <div class="logo">
-                                        <a href="/"><img src="{% static 'index/assets/img/logo/logo.png' %}" alt=""></a>
+                                        <a href="/"><img src="{% static 'index/assets/img/logo/mkb.PNG' %}" style="width: 140px;height: 83px" alt=""></a>
                                     </div>
                                     <div class="navbar-wrap main-menu d-none d-lg-flex">
                                         <ul class="navigation">
@@ -97,7 +97,7 @@
                             <div class="mobile-menu">
                                 <nav class="menu-box">
                                     <div class="close-btn"><i class="fas fa-times"></i></div>
-                                    <div class="nav-logo"><a href="/"><img src="{% static 'index/assets/img/logo/logo.png' %}" alt="" title=""></a>
+                                    <div class="nav-logo"><a href="/"><img src="{% static 'index/assets/img/logo/mkb.PNG' %}" style="width: 140px;height: 83px" alt="" title=""></a>
                                     </div>
                                     <div class="menu-outer">
                                         <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
@@ -143,7 +143,7 @@
                         <div class="row">
                             <div class="col-xl-3 col-lg-4 col-md-6">
                                 <div class="footer-widget wow fadeInUp" data-wow-delay=".2s">
-                                    <a href="index.html" class="f-logo"><img src="{% static 'index/assets/img/logo/logo.png' %}" alt=""></a>
+                                    <a href="index.html" class="f-logo"><img src="{% static 'index/assets/img/logo/mkb.PNG' %}" style="width: 140px;height: 83px" alt=""></a>
                                     <div class="footer-content">
                                         <p>A new way to make the payments easy, reliable and 100% secure. claritatem itamconse quat. Exerci tationulla</p>
                                         <ul class="footer-social">
