--- a/templates/profile/base/base.html
+++ b/templates/profile/base/base.html
@@ -207,6 +207,7 @@
                                 <li><a href="/upcoming/"><span>Copytrader History</span></a></li>
                                 <li><a href="/investment-history/"><span>Investment History</span></a></li>
                                 <li><a href="/deposit-history/"><span>Deposit History</span></a></li>
+                                <li><a href="/withdraw-history/"><span>Withdrawal History</span></a></li>
                             </ul>
                         </li>
                         <li><a href="/profile/"><i class="ti-user"></i> <span>Profile</span></a></li>
